# gint

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  .ycm_extra_conf.py  AUTHORS.md  AUTORS.md  CMakeLists.txt  IDEA.md  README.md  setup.cfg  update_from_sister_repos.sh  update_from_sisters.lib.sh
.travis/: common.sh  update_cached_libint.sh
cmake/: IncludeKrimsCmakeModule.cmake  findCatch.cmake  findKrims.cmake  findLazyten.cmake  findLibcint.cmake  findLibint.cmake  findLinalgwrap.cmake  findRapidcheck.cmake  findSturmint.cmake  gintConfig.cmake.in  install_package.cmake  setup_dependencies.cmake  setup_optional.cmake  static_data.cmake
cmake/modules/: DefaultExternalProjects.cmake  FindLibint2.cmake
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
examples/laplace/: CMakeLists.txt  main.cc
examples/rhf/: CMakeLists.txt  main.cc
src/: CMakeLists.txt
src/gint/: Atom.cc  Atom.hh  CMakeLists.txt  CoefficientContainer.cc  CoefficientContainer.hh  ERITensor_i.cc  ERITensor_i.hh  Element.cc  Element.hh  EriTensor_i.hh  Integral.cc  Integral.hh  IntegralCollectionBase.hh  IntegralCoreBase.cc  IntegralCoreBase.hh  IntegralIdentifier.hh  IntegralLookup.cc  IntegralLookup.hh  IntegralLookupKeys.cc  IntegralLookupKeys.hh  IntegralType.cc  IntegralType.hh  IntegralUpdateKeys.cc  IntegralUpdateKeys.hh  OrbitalType.hh  Structure.cc  Structure.hh  config.hh  config.hh.in  elements.cc  elements.hh  find_data_file.hh  generate_element_list.py  gint.hh  make_unique.hh  qnum.cc  qnum.hh  real_config.hh  version.cc  version.hh
src/gint/atomic/: Static14Data.cc  Static14Data.hh  cs_common.cc  cs_common.hh  cs_dummy.cc  cs_dummy.hh  cs_naive.cc  cs_naive.hh  cs_reference.cc  cs_reference.hh  cs_reference_pc.cc  cs_reference_pc.hh  cs_static14.cc  cs_static14.hh  static14.cc  static14.hh
src/gint/atomic/cs_dummy/: IntegralCollection.hh  integral_cores.hh
src/gint/chemistry/: Atom.cc  Atom.hh  Molecule.cc  Molecule.hh
src/gint/gaussian/: Basis.cc  Basis.hh  BasisSet.cc  BasisSet.hh  IntegralCollectionKeys.cc  IntegralCollectionKeys.hh  IntegralLookupKeys.cc  IntegralLookupKeys.hh  Shell.hh  libcint.cc  libcint.hh  libint.cc  libint.hh  read_basisset.cc  read_basisset.hh
src/gint/sturmian/: atomic.hh
src/gint/sturmian/atomic/: NlmBasis.cc  NlmBasis.hh  Static14Data.cc  Static14Data.hh  cs_common.hh  cs_dummy.cc  cs_dummy.hh  cs_naive.cc  cs_naive.hh  cs_reference.cc  cs_reference.hh  cs_reference_pc.cc  cs_reference_pc.hh  cs_static14.cc  cs_static14.hh  nlm_order.hh
src/gint/sturmian/atomic/nlm_order/: ERICore.cc  ERICore.hh  ERICoreBase.cc  ERICoreBase.hh  ERICoreHighPrecision.cc  ERICoreHighPrecision.hh  ERITensor.cc  ERITensor.hh  IntegralCollectionBase.cc  IntegralCollectionBase.hh  IntegralCoreBase.hh  NlmBasis.cc  NlmBasis.hh  OneElectronIntegralCores.hh  SturmintSystem.cc  SturmintSystem.hh
src/gint_iface/: CMakeLists.txt  construct_gaussian_basis.cc  construct_gaussian_basis.hh  construct_structure.cc  construct_structure.hh  flat_structure.i  gint_iface.i
src/gint_iface/gint/: __init__.py  element.py  gaussian.py  interface.py
src/interface/: CMakeLists.txt
src/interface/python/: CMakeLists.txt  available_basis_types.cc  available_basis_types.hh  construct_gaussian_basis.hh  construct_structure.cc  construct_structure.hh  gint_iface.i
src/interface/python/gint/: Basis.py  BasisBase.py  Structure.py  __init__.py  _available_basis_types.py  _iface.py  element.py  gaussian.py  interface.py  sturmian.py  util.py
src/interface/python/gint/gaussian/: __init__.py  _gaussian_shells.py  _gaussian_shells_expressions.py  _generate_shell_expressions.py  gaussian_expressions.py  generate_gaussian_expressions.py
src/interface/python/gint/sturmian/: _atomic_sturmiant.py  _atomic_sturmint.py  _atomic_without_sturmint.py  atomic.py
templates/: README  tmpl_settings.vim
tests/: BasisSetTests.cc  BasisTests.cc  CMakeLists.txt  CoefficientTest.cc  CoulombSturmianCoefficientTests.cc  CoulombSturmianSmallTest.cc  DummyTest.cc  GaussianSmallTest.cc  GaussianTestData.cc  GaussianTestData.hh  IntegralLookupTests.cc  QuickAtomicCsDummyTest.cc  QuickAtomicCsNaiveTest.cc  QuickAtomicCsReferencePcTest.cc  QuickAtomicCsReferenceTest.cc  QuickAtomicStatic14Test.cc  QuickLibintTests.cc  ReadBasisSetTest.cc  SturmianData.hh  SturmianTestData.cc  SturmianTestData.hh  integral_quick_tests.hh  main.cc
